@@ -56,7 +56,6 @@ mtimestamp $dd.$MM.$yyyy
 ./doc/waterman.gtm 2 waterman - Waterman polyhedra
 ./doc/sph_rings.gtm 2 sph_rings - rings of points on a sphere
 ./doc/repel.gtm 2 repel - equilibrium of points repelling on a sphere
-./doc/lat_grid.gtm 2 lat_grid - lattices and grids with integer coordinates
 ./doc/bravais.gtm 2 bravais - Bravais lattices
 
 ./doc/rotegrity.gtm 2 EXTRA: rotegrity - make rotegrity and nexorede models
@@ -67,6 +66,7 @@ mtimestamp $dd.$MM.$yyyy
 ./doc/spidron.gtm 2 EXTRA: spidron - spidronise a polyhedron
 ./doc/dome_layer.gtm 2 EXTRA: dome_layer - dome strut arrangements
 ./doc/jitterbug.gtm 2 EXTRA: jitterbug - jitterbug transformation
+./doc/lat_grid.gtm 2 EXTRA: lat_grid - lattices and grids with integer coordinates
 ./doc/string_art.gtm 2 EXTRA: string_art - string figures
 ./doc/off2txt.gtm 2 EXTRA: off2txt - convert an OFF file to Hedron format
 
