@@ -90,7 +90,6 @@ Programs
 <li><a href="waterman.html">waterman</a> - Waterman polyhedra
 <li><a href="sph_rings.html">sph_rings</a> - rings of points on a sphere
 <li><a href="repel.html">repel</a> - equilibrium of points repelling on a sphere
-<li><a href="lat_grid.html">lat_grid</a> - lattices and grids with integer coordinates
 <li><a href="bravais.html">bravais</a> - Bravais lattices
 </ul>
 
@@ -109,6 +108,7 @@ limited use. They are provided for interest only.
 <li><a href="spidron.html">spidron</a> - spidronise a polyhedron
 <li><a href="dome_layer.html">dome_layer</a> - dome strut arrangements
 <li><a href="jitterbug.html">jitterbug</a> - jitterbug transformation
+<li><a href="lat_grid.html">lat_grid</a> - lattices and grids with integer coordinates
 <li><a href="string_art.html">string_art</a> - string figures
 <li><a href="off2txt.html">off2txt</a> - convert an OFF file to Hedron format
 </ul>
