@@ -55,7 +55,6 @@ mtimestamp $dd.$MM.$yyyy
 ./programs/waterman.gtm 3 waterman - Waterman polyhedra
 ./programs/sph_rings.gtm 3 sph_rings - rings of points on a sphere
 ./programs/repel.gtm 3 repel - equilibrium of points repelling on a sphere
-./programs/lat_grid.gtm 3 lat_grid - lattices and grids with integer coordinates
 ./programs/bravais.gtm 3 bravais - Bravais lattices
 
 ./programs/rotegrity.gtm 3 EXTRA: rotegrity - make rotegrity and nexorede models
@@ -66,6 +65,7 @@ mtimestamp $dd.$MM.$yyyy
 ./programs/spidron.gtm 3 EXTRA: spidron - spidronise a polyhedron
 ./programs/dome_layer.gtm 3 EXTRA: dome_layer - dome strut arrangements
 ./programs/jitterbug.gtm 3 EXTRA: jitterbug - jitterbug transformation
+./programs/lat_grid.gtm 3 EXTRA: lat_grid - lattices and grids with integer coordinates
 ./programs/string_art.gtm 3 EXTRA: string_art - string figures
 ./programs/off2txt.gtm 3 EXTRA: off2txt - convert an OFF file to Hedron format
 
