@@ -17,7 +17,7 @@ bin_PROGRAMS = off2pov off2vrml off2crds off2obj obj2off off2dae \
 		poly_kscope polygon zono conv_hull pol_recip \
 		geodesic poly_form sph_rings off_report off_query \
 		kcycle unitile2d repel \
-		lat_grid lat_util canonical conway n_icons iso_delta \
+		lat_util canonical conway n_icons iso_delta \
 		bravais waterman col_util planar off_normals leonardo \
 		iso_kite to_nfold symmetro stellate miller wythoff off_color_radial \
 		tetra59
@@ -29,7 +29,7 @@ dist_man1_MANS = off2pov.1 off2vrml.1 off2crds.1 off2obj.1 \
 		geodesic.1 poly_form.1 sph_rings.1 \
 		off_report.1 off_query.1 \
 		kcycle.1 unitile2d.1 repel.1 \
-		lat_grid.1 lat_util.1 canonical.1 conway.1 n_icons.1 \
+		lat_util.1 canonical.1 conway.1 n_icons.1 \
 		iso_delta.1 bravais.1 waterman.1 col_util.1 planar.1 \
 		off_normals.1 leonardo.1 iso_kite.1 to_nfold.1 \
 		symmetro.1 stellate.1 miller.1 wythoff.1 off_color_radial.1 \
@@ -58,7 +58,6 @@ off_query_SOURCES = off_query.cc rep_print.cc rep_print.h
 kcycle_SOURCES = kcycle.cc
 unitile2d_SOURCES = unitile2d.cc
 repel_SOURCES = repel.cc
-lat_grid_SOURCES = lat_grid.cc
 lat_util_SOURCES = lat_util.cc lat_util_common.cc lat_util_common.h
 canonical_SOURCES = canonical.cc canonical_common.cc canonical_common.h
 conway_SOURCES = conway.cc canonical_common.cc canonical_common.h
