@@ -14,11 +14,12 @@ LDADD = $(top_builddir)/base/libantiprism.la
 
 
 bin_PROGRAMS = spidron off2txt dome_layer poly_weave mmop_origami \
-	       jitterbug string_art kaleido rotegrity sweep_edges
+	       jitterbug string_art kaleido rotegrity sweep_edges \
+	       lat_grid
 
 dist_man1_MANS = spidron.1 off2txt.1 dome_layer.1 poly_weave.1 \
 		 mmop_origami.1 jitterbug.1 string_art.1 kaleido.1 \
-		 rotegrity.1 sweep_edges.1
+		 rotegrity.1 sweep_edges.1 lat_grid.1
 
 spidron_SOURCES = spidron.cc
 off2txt_SOURCES = off2txt.cc
@@ -30,3 +31,5 @@ string_art_SOURCES = string_art.cc
 kaleido_SOURCES = kaleido.cc
 rotegrity_SOURCES = rotegrity.cc
 sweep_edges_SOURCES = sweep_edges.cc
+lat_grid_SOURCES = lat_grid.cc
+
