@@ -22,7 +22,8 @@ XX-XX-22 Adrian Rossiter <adrian@antiprism.com>
             johnson: updated j88-j90 formulas. documented other formulas
             uniform: substring search removed
             polygon: orientation changed for models 2 -s2, 2 -s4, 4, 5, 6, 8,
-               construction changed for some models 5 -s3.
+               construction changed for some models 5 -s3
+            lat_grid: move to extra programs
             help: added alternate names and wenninger numbering sections
             build: minimum autoconf version changed to 0.69
          Fixes
